# AscEmu

./: CMakeLists.txt
.circleci/: config.yml
cmake/Modules/: PCHSupport.cmake
src/collision/: CMakeLists.txt
src/collision/Management/: MMapManager.cpp
src/collision/PCH/: collisionPCH.hpp
src/logonserver/: CMakeLists.txt  LogonStdAfx.h
src/logonserver/Auth/: AuthSocket.Legacy.cpp  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp
src/logonserver/Console/: LogonConsole.cpp
src/logonserver/LogonCommServer/: LogonCommServer.cpp  LogonCommServer.h
src/logonserver/PCH/: logonPCH.hpp
src/logonserver/Realm/: RealmManager.cpp  RealmManager.hpp
src/logonserver/Server/: AccountMgr.cpp  AccountMgr.h  IpBanMgr.cpp  IpBanMgr.h  Main.cpp  Master.cpp  Master.hpp
src/scripts/Battlegrounds/: CMakeLists.txt
src/scripts/Battlegrounds/ArathiBasin/: ArathiBasin.cpp
src/scripts/Battlegrounds/PCH/: BattlegroundsPCH.hpp
src/scripts/EventScripts/: CMakeLists.txt
src/scripts/ExtraScripts/: CMakeLists.txt
src/scripts/GossipScripts/: CMakeLists.txt
src/scripts/InstanceScripts/: CMakeLists.txt
src/scripts/LuaEngine/: CMakeLists.txt  GameobjectFunctions.cpp  LUAEngine.cpp  SpellFunctions.h
src/scripts/LuaEngine/PCH/: LuaEnginePCH.hpp
src/scripts/MapScripts/: CMakeLists.txt
src/scripts/MiscScripts/: CMakeLists.txt
src/scripts/QuestScripts/: CMakeLists.txt
src/scripts/SpellHandlers/: CMakeLists.txt
src/shared/: ByteBuffer.h  CMakeLists.txt
src/shared/AENetwork/: AENetworkClientInterface.hpp  AENetworkCommon.hpp  AENetworkConnection.hpp  AENetworkPacket.hpp  AENetworkServerInterface.hpp  AENetworkThreadsafeQueue.hpp
src/shared/Logging/: Logger.cpp
src/shared/PCH/: sharedPCH.hpp
src/world/: CMakeLists.txt  StdAfx.cpp
src/world/PCH/: worldPCH.hpp
src/world/Server/: WorldSocket.cpp
(+27 files in other folders)
